# HPLaptopDebug

./: CMakeLists.txt  glad.c  main.cpp
